chore: update character and remove turns route
